--- a/deloitte.ipynb
+++ b/deloitte.ipynb
@@ -1367,6 +1367,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://towardsdatascience.com/recommender-systems-matrix-factorization-using-pytorch-bd52f46aa199 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Standardize by category probably??? Buying packs and singular values could be messing with the recommendation"
    ]
   },
@@ -2114,19 +2121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('hello')"
+    "from sklearn.metrics.pairwise import cosine_similarity\n"
    ]
   },
   {
