--- a/deloitte.ipynb
+++ b/deloitte.ipynb
@@ -2251,18 +2251,18 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.        , 0.83673477, 0.90535211, ..., 0.90003522, 0.90721932,\n",
-       "        0.80818079],\n",
-       "       [0.83673477, 1.        , 0.91004059, ..., 0.84010171, 0.88999893,\n",
-       "        0.89501887],\n",
-       "       [0.90535211, 0.91004059, 1.        , ..., 0.94197808, 0.93031072,\n",
-       "        0.79384299],\n",
+       "array([[1.        , 0.88634357, 0.92714718, ..., 0.94795787, 0.80267083,\n",
+       "        0.90516666],\n",
+       "       [0.88634357, 1.        , 0.82863291, ..., 0.95407522, 0.81870886,\n",
+       "        0.95583429],\n",
+       "       [0.92714718, 0.82863291, 1.        , ..., 0.93217447, 0.80195172,\n",
+       "        0.81459183],\n",
        "       ...,\n",
-       "       [0.90003522, 0.84010171, 0.94197808, ..., 1.        , 0.93545618,\n",
-       "        0.77583302],\n",
-       "       [0.90721932, 0.88999893, 0.93031072, ..., 0.93545618, 1.        ,\n",
-       "        0.9038944 ],\n",
-       "       [0.80818079, 0.89501887, 0.79384299, ..., 0.77583302, 0.9038944 ,\n",
+       "       [0.94795787, 0.95407522, 0.93217447, ..., 1.        , 0.8582987 ,\n",
+       "        0.92694166],\n",
+       "       [0.80267083, 0.81870886, 0.80195172, ..., 0.8582987 , 1.        ,\n",
+       "        0.91329041],\n",
+       "       [0.90516666, 0.95583429, 0.81459183, ..., 0.92694166, 0.91329041,\n",
        "        1.        ]])"
       ]
      },
@@ -2307,6 +2307,33 @@
    "outputs": [],
    "source": [
     "correlation_product_ID = correlation_matrix[product_ID]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "item_key                              I00003\n",
+       "item_name      Barq's Root Beer - 12 oz cans\n",
+       "desc                      a. Beverage - Soda\n",
+       "unit_price                              6.75\n",
+       "man_country                       Bangladesh\n",
+       "supplier                        DENIMACH LTD\n",
+       "unit                                    cans\n",
+       "Name: 2, dtype: object"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "itd.iloc[2]"
    ]
   },
   {
@@ -3344,51 +3371,6 @@
    ],
    "source": [
     "rec_df[rec_df['customer_key'] == 'C002656'].groupby('item_name')['quantity'].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 4.87102084e-02, -3.37685160e-02,  8.76784474e-02, -1.61455870e-01,\n",
-       "        1.49674732e-02, -4.02827282e-03,  4.62708212e-02, -2.67039146e-02,\n",
-       "       -1.17439456e-01,  5.33536747e-02, -1.33446798e-01,  3.99110047e-03,\n",
-       "       -1.52002973e-02, -8.09520669e-03,  7.38252401e-02, -7.17619285e-02,\n",
-       "        2.68237069e-02,  5.26300631e-02, -4.80514839e-02, -1.46373631e-02,\n",
-       "        2.12579127e-02,  6.95805624e-02,  4.27926220e-02, -2.09792444e-04,\n",
-       "       -5.32155111e-02,  3.32325026e-02,  5.05976602e-02,  2.87884474e-02,\n",
-       "        5.52647710e-02,  4.94486652e-02, -6.07686974e-02, -5.23375496e-02,\n",
-       "       -1.47662284e-02,  6.03189357e-02, -2.11489070e-02,  2.47777021e-03,\n",
-       "        1.23908401e-01, -1.21632218e-02,  8.50438029e-02,  5.63222030e-03,\n",
-       "        5.47095314e-02, -9.68141016e-03,  1.35399491e-01, -8.75521898e-02,\n",
-       "       -5.61403185e-02,  3.73707749e-02,  5.42613678e-04, -3.21489945e-03,\n",
-       "       -7.41549805e-02,  8.75242576e-02,  1.82934720e-02, -1.96094178e-02,\n",
-       "        8.36759806e-02,  5.08516952e-02, -4.10097837e-02, -3.04069649e-02,\n",
-       "        1.00868136e-01,  1.10891722e-01, -7.69532546e-02,  5.69007993e-02,\n",
-       "        3.40287089e-02,  8.51669535e-03,  1.12945382e-02, -2.44577825e-02,\n",
-       "       -8.61612186e-02,  2.03862227e-02, -6.18118756e-02,  3.30605097e-02,\n",
-       "       -7.92714655e-02, -2.85473503e-02,  4.77328971e-02,  1.23398313e-02,\n",
-       "       -1.32364873e-02,  1.25657870e-02, -1.15310743e-01,  3.92835494e-03,\n",
-       "        1.38413766e-02,  1.21608123e-01,  1.60446167e-01,  2.29550712e-02,\n",
-       "        2.03752462e-02, -4.97321486e-02, -1.57041140e-04,  4.17813994e-02,\n",
-       "        5.07072285e-02,  7.13701639e-03, -5.12625985e-02, -1.41313216e-02,\n",
-       "       -1.20300129e-02, -7.56262057e-03, -3.79690044e-02, -1.44018427e-01,\n",
-       "        4.42838483e-02, -3.43478285e-02, -1.29751101e-01,  2.74302857e-03,\n",
-       "        2.80467663e-02, -4.16253395e-02,  2.02618223e-02, -2.68668365e-02],\n",
-       "      dtype=float32)"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "aggregate_vectors(purchases_train[0])"
    ]
   },
   {
